Fix right output cell alignment.
This regression was added in 0204ceed
Fixes #1610

--- a/core/src/main/web/app/styles/cell-outputs.scss
+++ b/core/src/main/web/app/styles/cell-outputs.scss
@@ -15,10 +15,6 @@
  */
 
 bk-code-cell-output {
-  .toggle-menu.bkr {
-    right: $grid-gutter-width - 1px;
-  }
-
   .ui-state-default {
     background: rgb(235, 235, 235);
   }
